k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget-app
  template:
    metadata:
      labels:
        app: budget-app
    spec:
      containers:
        - name: budget-app
          image: amandeol063/budget-app:latest
          ports:
            - containerPort: 3000
          command: ["entrypoint.sh"]
