k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: budget-app
spec:
  selector:
    app: budget-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
